--- a/1-html-intro/index.html
+++ b/1-html-intro/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+    </head>
 
-<body>
-    Testing
-</body>
+    <body>
+
+        <div style="background-color: blueviolet;">
+            Testing <strong>123</strong>
+        </div>
+        
+        <div style="background-color: red;">
+            <em>underneath</em>!
+        </div>
+
+    </body>
+
 </html>
