some inline styles

--- a/1-html-intro/index.html
+++ b/1-html-intro/index.html
@@ -9,12 +9,14 @@
 
     <body>
 
+        <br>
+
         <div style="background-color: blueviolet;">
             Testing <strong>123</strong>
         </div>
-        
+
         <div style="background-color: red;">
-            <em>underneath</em>!
+            <em>underneath test</em>!
         </div>
 
     </body>
