added list content

--- a/1-html-intro/index.html
+++ b/1-html-intro/index.html
@@ -9,6 +9,13 @@
 
     <body>
 
+        <h1>Lorem ipsum</h1> 
+        <h2>dolor sit amet consectetur, </h2>
+        <h3>adipisicing elit. </h3>
+        <h4>Laborum doloremque minus assumenda ex sit culpa, </h4>
+        <h5>sint tenetur sunt iste sapiente ad maxime soluta obcaecati labore. </h5>
+        <h6>Ut rem totam reprehenderit voluptatibus?</h6>
+
         <br>
 
         <div style="background-color: blueviolet;">
@@ -18,6 +25,52 @@
         <div style="background-color: red;">
             <em>underneath test</em>!
         </div>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, excepturi?
+        </p>
+
+        <hr>
+
+        <p>
+            Lorem ipsum dolor sit amet.
+        </p>
+
+        <pre style="color: red;">
+            To be or not to be
+                That is the 
+                
+            question.
+        </pre>
+
+        <b>Bold</b><br>
+        <i>Italics</i><br>
+        <strong>Important</strong><br>
+        <em>Italics</em><br>
+        <mark>Highlight</mark><br>
+        <small>Small</small><br>
+        <del>Deleted</del><br>
+        <ins>Inserted</ins><br>
+        Test <sup>superscripted</sup><br>
+        Test <sub>subscripted</sub><br>
+
+        <section>
+            <h2>Section Tag Heading</h2>
+        </section>
+
+        <ol type="a" style="display: inline-block;">
+            <li>item 1</li>
+            <li>item 2</li>
+            <li>item 3</li>
+            <li>item 4</li>
+        </ol>
+
+        <ul type="none" style="display: inline-block;">
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+            <li>item</li>
+        </ul>
 
     </body>
 
