--- a/1-html-intro/index.html
+++ b/1-html-intro/index.html
@@ -72,6 +72,22 @@
             <li>item</li>
         </ul>
 
+        <br>
+
+        <img 
+            src="https://cdn-prod.medicalnewstoday.com/content/images/articles/322/322052/blackberries-in-a-bowl.jpg" 
+            alt="blackberries in a bowl"
+            height="500px"
+            width="800px"
+        >
+
+        <br>
+
+        <a href="https://perscholas.org" target="_blank">Per Scholas Website</a>
+
+        <a href="mailto:me@example.com">Send me an email</a>
+        <a href="tel:+157839475">Give me a call</a>
+
     </body>
 
 </html>
