--- a/1-html-intro/index.html
+++ b/1-html-intro/index.html
@@ -9,6 +9,8 @@
 
     <body>
 
+<!-- Header Elements (h1-h6) -->
+
         <h1>Lorem ipsum</h1> 
         <h2>dolor sit amet consectetur, </h2>
         <h3>adipisicing elit. </h3>
@@ -25,6 +27,8 @@
         <div style="background-color: red;">
             <em>underneath test</em>!
         </div>
+
+<!-- Paragraph Tags  -->
 
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, excepturi?
@@ -43,6 +47,8 @@
             question.
         </pre>
 
+<!-- Formatting Tags (also inline) -->
+
         <b>Bold</b><br>
         <i>Italics</i><br>
         <strong>Important</strong><br>
@@ -54,9 +60,13 @@
         Test <sup>superscripted</sup><br>
         Test <sub>subscripted</sub><br>
 
+<!-- Section Tag (usually includes a header) -->
+
         <section>
             <h2>Section Tag Heading</h2>
         </section>
+
+<!-- Ordered & Unordered List (with list items) -->
 
         <ol type="a" style="display: inline-block;">
             <li>item 1</li>
@@ -74,6 +84,8 @@
 
         <br>
 
+<!-- Image Tag (with src for the link to the image) -->
+
         <img 
             src="https://cdn-prod.medicalnewstoday.com/content/images/articles/322/322052/blackberries-in-a-bowl.jpg" 
             alt="blackberries in a bowl"
@@ -83,9 +95,16 @@
 
         <br>
 
+<!-- Anchor Tags -->
+
         <a href="https://perscholas.org" target="_blank">Per Scholas Website</a>
 
+        <br>
+
         <a href="mailto:me@example.com">Send me an email</a>
+
+        <br> 
+
         <a href="tel:+157839475">Give me a call</a>
 
     </body>
