some more folder structure

--- a/1-html-intro/pages/index.html
+++ b/1-html-intro/pages/index.html
@@ -107,6 +107,10 @@
 
         <a href="tel:+157839475">Give me a call</a>
 
+        <br>  <br>  <br> 
+
+        <a href="./resume.html">Resume</a>
+
     </body>
 
 </html>
