--- a/2-html-and-css/index.html
+++ b/2-html-and-css/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     Nothing
+
+    <div style="border: 1px solid black; padding: 10px 5px 7px 6px; margin: 10px;">Content</div>
+    <div style="border: 1px solid black; padding: 10px; margin: 10px;">Content</div>
+    <div style="border: 1px solid black; padding: 10px; margin: 10px;">Content</div>
+
 </body>
 </html>
