--- a/2-html-and-css/index.html
+++ b/2-html-and-css/index.html
@@ -29,5 +29,7 @@
     <div style="border: 1px solid black; padding: 10px; margin: 10px;">Content</div>
     <div style="border: 1px solid black; padding: 10px; margin: 10px;">Content</div>
 
+    <a href="example.html">Example</a>
+
 </body>
 </html>
