added more elements to table

--- a/2-html-and-css/pages/table.html
+++ b/2-html-and-css/pages/table.html
@@ -8,19 +8,32 @@
 </head>
 <body>
     <table>
-        <tr>
-            <th>Table Header</th>
-        </tr>
-        <tr>
-            <td>Table cell</td>
-            <td>Table cell</td>
-            <td>Table cell</td>
-        </tr>
-        <tr>
-            <td>Table cell</td>
-            <td>Table cell</td>
-            <td>Table cell</td>
-        </tr>
+        <caption>Practice Table</caption>
+        
+        <thead>
+            <tr>
+                <th>Header 1</th>
+                <th>Header 2</th>
+                <th>Header 3</th>
+            </tr>
+        </thead>
+
+        <tbody>
+            <tr>
+                <td>Table cell</td>
+                <td>Table cell</td>
+                <td>Table cell</td>
+            </tr>
+        </tbody>
+
+        <tfoot>
+            <tr>
+                <td>Table cell</td>
+                <td>Table cell</td>
+                <td>Table cell</td>
+            </tr>
+        </tfoot>
     </table>
+    
 </body>
 </html>
