added position relative example

--- a/3-css-properties/pages/display/block.html
+++ b/3-css-properties/pages/display/block.html
@@ -36,7 +36,7 @@
         /****** Child divs ******/
         .block div {
             /******     Comment out  width for block example   ******/
-            width: 100px;
+            /* width: 100px; */
             height: 100px;
             border: 1px solid #000;
             background-color: lightgreen;
@@ -46,7 +46,7 @@
         span {
             background-color: aqua;
             /*Comment out display to see span in it's default inline value  .*/
-            /*display: block;*/
+            display: block;
         }
     </style>
 </head>
