--- a/3-css-properties/pages/position/relative.html
+++ b/3-css-properties/pages/position/relative.html
@@ -29,6 +29,8 @@
             width: 100px;
             height: 100px;
             position: relative;
+            right: 50px;
+            bottom: 20px;
         }
 
     </style>
