added flexbox example

--- a/2-html-and-css/pages/index.html
+++ b/2-html-and-css/pages/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- link to external styling -->
     <link rel="stylesheet" href="../styles/index.css">
     
+    <!-- internal styling -->
     <style>
         body, div { 
             border-width: 1px; 
@@ -26,6 +28,8 @@
     Nothing
 
     <div>Content</div>
+
+    <!-- inline style -->
     <div style="border: 1px solid black; padding: 10px; margin: 10px;">Content</div>
     <div style="border: 1px solid black; padding: 10px; margin: 10px;">Content</div>
 
