--- a/2-html-and-css/pages/nav.html
+++ b/2-html-and-css/pages/nav.html
@@ -62,11 +62,12 @@
 
      <form action="#">
         <label>Choose a car:</label>
+
         <select name="cars">
           <option value="volvo">Volvo</option>
-          <option value="saab">Saab</option>
+          <option value="saab" selected>Saab</option>
           <option value="fiat">Fiat</option>
-          <option value="audi" selected>Audi</option>
+          <option value="audi">Audi</option>
         </select>
       
         <input type="submit">
