--- a/3-css-properties/pages/position/absolute.html
+++ b/3-css-properties/pages/position/absolute.html
@@ -5,7 +5,21 @@
     <meta charset="UTF-8">
     <title>Position Absolute</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Bungee+Spice&display=swap" rel="stylesheet"/>
+
+
 <style>
+
+    h1 {
+        background: conic-gradient(#f69d3c, #3f87a6);
+        font-family: "Bungee Spice";
+        text-align: center;
+        box-shadow: 2px 2px 1px rgba(100%, 50%, 50%, .33);
+    }
+
+
     /*
     Emmet shortcut mt margin top
     Emmet shortcut bgc background color
@@ -23,15 +37,29 @@
     div {
         width: 100px;
         height: 100px;
-        border: 1px solid;
+        /* border: 1px solid; */
+        background-color: #ebd3d3;
+        box-shadow: 2px 2px 1px black;
     }
 
     .exampleBox {
-        background-color: lightcoral;
+        /* display: none; */
+        background: rgba(123, 191, 255, .5);
         width: 100px;
         height: 100px;
         position: absolute;
+        left: 20px;
+        bottom: 10px;
+        z-index: 1;
 
+        /* shorthand */
+        border: 1px solid #ebd3d3;
+        border-radius: 10px;
+
+        /* long-form */
+        /* border-width: 1px;
+        border-style: solid;
+        border-color: black; */
     }
 </style>
 </head>
