--- a/4-flexbox/pages/nav.html
+++ b/4-flexbox/pages/nav.html
@@ -1,62 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Navigation Practice</title>
 
     <style>
-    header{
+
+      header {
         margin-top: 100px;
         margin-left: 8px;
         margin-right: 8px;
-    }
+      }
 
-        nav > ul {
-            display: flex;
-            list-style-type: none;
-            padding: 14px 0 14px 0;
-            /*When three values are specified, the first margin applies to the top, the second to the right and left, the third to the bottom.*/
-            margin: -8px -8px -8px;
-            background-color: white;
-            border: 1px dashed red;
-        }
-        li a {
-            border: 1px solid #000;
-            padding: 10px 30px;
-            text-decoration: none;
-            color: black;
-        }
+      nav > ul {
+        display: flex;
+        list-style-type: none;
+        padding: 14px 0 14px 0;
+        /*When three values are specified, the first margin applies to the top, the second to the right and left, the third to the bottom.*/
+        margin: -8px -8px -8px;
+        background-color: white;
+        border: 1px dashed red;
+        /* justify-content: space-between; */
+      }
 
-        .link1{
+      li a {
+        border: 1px solid #000;
+        padding: 10px 30px;
+        text-decoration: none;
+        color: black;
+      }
 
-        }
-        .link2{
-
-        }
-        .link3{
-        }
-        .link4{
-
-        }
-        .link5{
-
-        }
-
+      .link1 {
+        /* margin-left: auto; */
+        margin-right: auto;
+      }
+      .link2 {
+        /* margin-left: auto; */
+      }
+      .link3 {
+        /* margin-left: auto;
+        margin-right: auto; */
+      }
+      .link4 {
+        /* margin-right: auto; */
+        /* margin-left: auto; */
+        margin-left: auto;
+      }
+      .link5 {
+        /* margin-left: auto; */
+      }
     </style>
-</head>
-<body>
-
-<header>
-    <nav>
+  </head>
+  <body>
+    <header>
+      <nav>
         <ul>
-            <li class="link1"><a href="#">Link1</a></li>
-            <li class="link2"><a href="#">Link2</a></li>
-            <li class="link3"><a href="#">Link3</a></li>
-            <li class="link4"><a href="#">Link4</a></li>
-            <li class="link5"><a href="#">Link5</a></li>
+          <li class="link1"><a href="#">Link1</a></li>
+          <li class="link2"><a href="#">Link2</a></li>
+          <li class="link3"><a href="#">Link3</a></li>
+          <li class="link4"><a href="#">Link4</a></li>
+          <li class="link5"><a href="#">Link5</a></li>
         </ul>
-    </nav>
-
-</header>
-</body>
+      </nav>
+    </header>
+  </body>
 </html>
