added some css to the card

--- a/4-flexbox/pages/card.html
+++ b/4-flexbox/pages/card.html
@@ -9,10 +9,10 @@
 <body>
     <div class="card-body">
         <div class="img-container">
-          <img src="/images/image-example.svg" alt="">
+          <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAARYAAAC1CAMAAACtbCCJAAAACVBMVEVjY2NeXl65ubnV9x57AAAATUlEQVR4nO3BMQEAAAgDoGn/0BZYAA8gAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA4J+hyFIcuuEDQ5L8dNwAAAAASUVORK5CYII=" alt="">
         </div>
         <h1>Heading</h1>
-        <p>Lorem ipsum ..</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, eum laboriosam? Maiores, officiis maxime pariatur culpa fugit omnis quos quam eaque neque sit tempore nostrum quod. Sequi deleniti qui ex totam ut corporis rerum et itaque rem laborum, facilis, eveniet eum nobis voluptatem, fuga illum optio culpa voluptas sint ullam?</p>
     </div>
 </body>
 </html>
