--- a/5-media-queries-transitions/pages/media-query.html
+++ b/5-media-queries-transitions/pages/media-query.html
@@ -16,6 +16,13 @@
             body {
                 background-color: pink;
             }
+        } 
+
+
+        @media only screen and (max-width: 400px) {
+            body {
+                background-color: orange;
+            }
         }
 
     </style>
