--- a/6-bootstrap/pages/index.html
+++ b/6-bootstrap/pages/index.html
@@ -12,6 +12,7 @@
     </style>
 </head>
 <body>
+    <p class="display-1">Heading</p>
     <div class="container text-center">
 
         <div class="row">
