--- a/316-dom/1-intro-to-dom/index.html
+++ b/316-dom/1-intro-to-dom/index.html
@@ -5,8 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js" defer></script>
+
+    <style>
+
+        body {
+            background-color: red;
+        }
+
+    </style>
 </head>
 <body>
+    <h1></h1>
+    <p></p>
     Hello DOM!
+    <a href="#" name="test">test</a>
+    <a href="#" name="test2">test2</a>
+    <a href="#" name="test3">test3</a>
+
+    <ul> 
+        <li></li>
+        <li>
+            <span></span>
+            <a href=""></a>
+            <p></p>
+        </li>
+        <li></li>
+    </ul>
+
 </body>
 </html>
